# sele_saisie_auto

./: .bumpversion.cfg  .coveragerc  .env.example  .env.sample  .gitignore  .pre-commit-config.yaml  .safety-project.ini  AGENT.md  README.md  REFACTORING_PLAN.md  TESTING.md  analysis_report.md  app_config.py  config.ini  config_manager.py  constants.py  design_notes.md  detailed_improvement_plan.md  dropdown_options.py  encryption_utils.py  error_handler.py  example_plugin.py  exceptions.py  fonctions_selenium_utils.py  gui_builder.py  implementation_analysis.md  implementation_verification.md  launcher.py  locators.py  logger_utils.py  logging_service.py  main.py  main_menu.py  plugins.py  pyproject.toml  pytest.ini  read_or_write_file_config_ini_utils.py  remplir_informations_supp_utils.py  remplir_jours_feuille_de_temps.py  requirements.txt  (+4 more)
.github/workflows/: ci copy 2.yml  ci copy.yml  ci.yml  code_complexity.yml  codecov.yml  complexity.yml  safety_scan.yml
docs/: index.md
docs/guides/: advanced-testing.md  advanced-usage-example.md  advanced_usage_example.md  async-algorithm-example.md  async-class-example.md  cli-tests.md  commandes-outils-qualite.md  config.ini-minimal  configuration.md  contributing.md  custom-algorithm-example.md  custom_algorithm_example.md  deployment.md  documentation-style.md  install_poetry_windows.md  installation.md  log_style-example.ini  logging-and-errors.md  usage-example.md
docs/overview/: architecture.md  limitations.md  overview.md
docs/reference/: api-reference.md  architecture.md  events.md  project-structure.md  security-config.md  tests-overview.md
docs/releases/: changelog.md
examples/: config_example.ini  dropdown_defaults.json  example_plugin.py
scripts/: export_requirements.py  install_poetry_windows.ps1
selenium_utils/: __init__.py  element_actions.py  navigation.py  wait_helpers.py
src/sele_saisie_auto/: __init__.py  additional_info_locators.py  app_config.py  cli.py  config_manager.py  console_ui.py  constants.py  day_filler.py  dropdown_options.py  encryption.py  encryption_utils.py  enums.py  error_handler.py  example_plugin.py  exceptions.py  gui_builder.py  launcher.py  locators.py  logger_utils.py  logging_service.py  main.py  main_menu.py  memory_config.py  messages.py  plugins.py  plugins_utils.py  read_or_write_file_config_ini_utils.py  remplir_informations_supp_utils.py  remplir_jours_feuille_de_temps.py  saisie_automatiser_psatime.py  saisie_context.py  selenium_driver_manager.py  shared_memory_service.py  shared_utils.py  styles.py  timeouts.py
src/sele_saisie_auto/alerts/: __init__.py  alert_handler.py
src/sele_saisie_auto/automation/: __init__.py  additional_info_page.py  browser_session.py  date_entry_page.py  login_handler.py
src/sele_saisie_auto/configuration/: __init__.py  service_configurator.py
src/sele_saisie_auto/contracts/: encryption.py
src/sele_saisie_auto/decorators/: __init__.py  (+2 more)
tests/: conftest.py  test_additional_info_page.py  test_alert_handler.py  test_app_config.py  test_auth_tuple_contract.py  test_automation_orchestrator.py  test_browser_session.py  test_cli.py  test_config_manager.py  test_console_ui.py  test_console_ui_basic.py  test_constants.py  test_contract_compliance.py  test_date_entry_page.py  test_day_filler.py  test_description_processor.py  test_duplicate_day_detector.py  test_element_filling_strategy.py  test_element_id_builder.py  test_encryption_context_manager.py  test_encryption_service.py  test_encryption_service_context.py  test_encryption_service_context_manager.py  test_error_handler.py  test_error_handling_decorator.py  test_example_plugin.py  test_exceptions.py  test_extra_info_helper.py  test_fonctions_selenium_utils.py  test_full_automation.py  test_gui_builder.py  test_handle_selenium_errors.py  test_launcher.py  test_launcher_dict_to_configparser.py  test_launcher_ensure_sections.py  test_launcher_roundtrip.py  test_log_configuration_details.py  test_logger_utils.py  test_logging_service.py  test_login_handler.py  (+32 more)
(+25 files in other folders)
