[tool.poetry]
name = "sele_saisie_auto"
version = "0.1.0"
description = "Automatisation de saisie de feuille de temps"
authors = ["Anonymous <example@example.com>"]
package-mode = true
packages = [
    { include = "sele_saisie_auto", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"
selenium = "4.25.0"
cryptography = "^43.0"
requests = "^2.32.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-cov = "^5.0"
flake8 = "^7.0"
pylint = "^3.0"
mypy = "^1.10"
black = "^24.3"
isort = "^5.13"
pre-commit = "^3.7"
coverage = "^7.5"
ruff = "^0.12.1"
radon = "^6.0.1"
radon-html = "*"
bandit = "^1.8.5"
safety = "^3.5.2"
pyinstaller = {version = "^6.11.1", markers = "python_version < '3.14'"}
pyinstaller-hooks-contrib = {version = "^2024.10", markers = "python_version < '3.14'"}

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = true

[tool.poetry.scripts]
psatime-launcher = "sele_saisie_auto.launcher:main"
psatime-auto = "sele_saisie_auto.saisie_automatiser_psatime:main"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "C90"]
ignore = ["E501"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.bumpversion]
current_version = "0.1.0"
config_file = ".bumpversion.cfg"
